--- a/index.html
+++ b/index.html
@@ -133,8 +133,8 @@
                         </p>
                     <span style="visibility: hidden;" class="item-remove"><i class="iconfont icon-delete"></i></span></li>
                     <li>
-                        <h3 contenteditable="true">基于 Zabbix的主机监视系统（kaobeimao.top/zabbix）</h3>
-                        <p contenteditable="true">kaobeimao.top/zabbix是用Zabbix编码包在基于阿里云ECS在Centos7.3的LNMP环境下搭建的主机监视系统。<br>（帐号：admin 密码：zabbix）<br>若提示未备案（实则已备），请刷新页面。<br></p>
+                        <h3 contenteditable="true">基于 Zabbix的主机监视系统（kaobeimao.club/zabbix）</h3>
+                        <p contenteditable="true">kaobeimao.club/zabbix是用Zabbix编码包在基于阿里云ECS在Centos7.3的LNMP环境下搭建的主机监视系统。<br>（帐号：admin 密码：zabbix）<br></p>
                     <span style="visibility: hidden;" class="item-remove"><i class="iconfont icon-delete"></i></span></li>
                     <li>
                         <h3 contenteditable="true">基于pure-ftp的文件传输系统（ftp://kaobeimao.shop）<br></h3>
